# stats-iplaycornhole

./: .cursorrules  .dockerignore  .env  .env.production  .gitignore  CHATGPT_QUICK_START.md  CHATGPT_SETUP.md  CHATGPT_SETUP_STEPS.md  CRON_SETUP.md  CURSOR_MCP_SETUP.md  DATABASE_SCHEMA_CHANGES.md  DATABASE_SYNC.md  DEPLOYMENT.md  EVENT_DATA_PLAN.md  EVENT_INDEXING_SUMMARY.md  GAME_INDEXING_PLAN.md  MCP_REMOTE_SETUP.md  MCP_SETUP.md  MCP_SIMPLE_SETUP.md  OPENAPI_FIXED.md  PLANNING.md  README.md  README_MCP.md  SETUP_INSTRUCTIONS.md  SETUP_POSTGRESQL_LOCAL.md  TODO.md  acl_cache_indexer.py  backup_db.sh  chatgpt_web_interface.html  check_event_status.py  check_games.py  check_games_status.sh  cornhole.db.backup  cornhole_dump_20251106_104818.sql  cornhole_prod.sql  cornhole_prod_20251106_142824.sql  cornhole_prod_full.sql  database.py  delete_local_events.py  event_indexer.py  (+21 more)
mcp-proxy-node/: index.js  package.json
static/: app.js  games.js  head_to_head.js  styles.css
templates/: admin-acl.html  admin-local.html  admin.html  event_detail.html  events.html  game_detail.html  games.html  head_to_head.html  index.html
