[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cornhole-mcp-proxy"
version = "1.0.0"
description = "MCP proxy for remote cornhole statistics server"
requires-python = ">=3.8"
dependencies = [
    "httpx>=0.27.0",
]
[project.scripts]
cornhole-mcp = "mcp_proxy:main"

[project.urls]
Homepage = "https://github.com/yourusername/fly-cornhole"
Repository = "https://github.com/yourusername/fly-cornhole"

